crates/ariadne-mcp/tests/snapshots/tools_complexity__complexity_file_grain.snap
---
source: crates/ariadne-mcp/tests/tools_complexity.rs
expression: golden
---
{
  "rows": [
    {
      "complexity": 7,
      "file": "src/alpha.rs",
      "symbol": null
    },
    {
      "complexity": 3,
      "file": "src/beta.rs",
      "symbol": null
    }
  ]
}
