crates/ariadne-mcp/tests/snapshots/tools_complexity__complexity_symbol_grain.snap
---
source: crates/ariadne-mcp/tests/tools_complexity.rs
expression: golden
---
{
  "rows": [
    {
      "complexity": 7,
      "file": "",
      "symbol": {
        "file": "src/alpha.rs",
        "kind": "function",
        "name": "crate::alpha"
      }
    },
    {
      "complexity": 3,
      "file": "",
      "symbol": {
        "file": "src/beta.rs",
        "kind": "function",
        "name": "crate::beta"
      }
    }
  ]
}
